# client_Mp_Proto

./: .editorconfig
client_MPath_/: compile.sh
client_MPath_/include/: common.h  data_manager.h  decoder.h  fec_param_adjustor.h  mySocket.h  rs_fft.h  system_params.h  thread_core_affinity_set.h  timer.h  video_writer.h
client_MPath_/src/: 1q  CMakeLists.txt  codeStreaming_parser.cpp  compile.sh  data_manager.cpp  decoder.cpp  main.cpp  myHevcdec.cpp  mySocket.cpp  myUtility.cpp  start.sh  test  test_fei  test_writer  thread_core_affinity_set.cpp  timer.cpp  video_writer.cpp
client_MPath_/src/rs_fft/: rs_fft.c
